<resources>
    <string name="app_name">Melitos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="facebook_app_id">673208493158825</string>
    <string name="fb_login_protocol_scheme">fb673208493158825</string>
    <string name="loading">Cargando...</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <!-- Login String -->
    <string name="login_or_reg">Iniciar Sesión o Registrarse</string>
    <string name="mail">Correo Electronico</string>
    <string name="pass">Contraseña</string>
    <string name="empty_field">Este campo no puede estar vacio</string>
    <string name="error_mail">Porfavor inserte un correo valido</string>
    <string name="error_weak_pass">Contraseña demasiado debil</string>
    <string name="error_wrong_pass">Error contraseña incorrecta</string>
    <string name="error_suspended_account">Error su cuenta fue suspendida temporalmente</string>
    <string name="forgot_pass">¿Olvido su contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="error_wrong_mail">Porfavor verifique su correo</string>
    <string name="name">Nombre</string>
    <string name="nick">Nickname (Apodo)</string>
    <string name="re_pass">Repita contraseña</string>
    <string name="error_already_exist">Error este correo ya tiene un acuenta registrada</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="not_same_pass">Las contraseñas no coinciden</string>
    <!--bottom sheet-->
    <string name="title_home">Balance</string>
    <string name="title_dashboard">Empleados</string>
    <string name="title_notifications">Inventario</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_sales">Vender</string>
    <!-- Dialog PRoduct -->
    <string name="stock">Stock</string>
    <string name="category">Categoria</string>
    <string name="price">Precio Unitario</string>
    <string name="price_buy">Precio de adquisicion</string>
    <string name="img_desc">Foto del producto</string>

    <string name="sales_cart_txt">Carrito !</string>

    <array name="resicon">
        <item>@android:drawable/ic_dialog_alert</item>
        <item>@android:drawable/ic_dialog_dialer</item>
        <item>@android:drawable/ic_dialog_email</item>
        <item>@android:drawable/ic_dialog_info</item>
        <item>@android:drawable/ic_dialog_map</item>
        <item>@android:drawable/ic_menu_camera</item>
        <item>@android:drawable/ic_menu_compass</item>
        <item>@android:drawable/ic_menu_gallery</item>
        <item>@android:drawable/ic_menu_my_calendar</item>
        <item>@android:drawable/ic_menu_myplaces</item>
        <item>@android:drawable/ic_menu_slideshow</item>
        <item>@android:drawable/ic_menu_today</item>
    </array>
    <array name="restext">
        <item>"alert"</item>
        <item>"dialer"</item>
        <item>"email"</item>
        <item>"info"</item>
        <item>"map"</item>
        <item>"camera"</item>
        <item>"compass"</item>
        <item>"gallery"</item>
        <item>"calendar"</item>
        <item>"myplaces"</item>
        <item>"slideshow"</item>
        <item>"today"</item>
    </array>

    <array name="resPrice">
        <item>"100bs"</item>
        <item>"150bs"</item>
        <item>"70bs"</item>
        <item>"200bs"</item>
        <item>"150bs"</item>
        <item>"100bs"</item>
        <item>"152bs"</item>
        <item>"80bs"</item>
        <item>"75bs"</item>
        <item>"90bs"</item>
        <item>"100bs"</item>
        <item>"152bs"</item>
    </array>
    <!-- Error db-->
    <string name="db_error_read">Error al leer la base de datos</string>
    <!-- Dialog Fragment-->
    <string name="d_desc">Descripcion</string>
    <string name="d_stock">Stock</string>
    <string name="d_min_stock">Stock minimo</string>
    <string name="d_off">Descuento</string>
    <string name="d_max_off">Descuento máximo</string>
    <string name="d_code">Codigo</string>
    <string name="buy">Precio de compra</string>
    <string name="sell">Precio de venta</string>
    <string name="cancel">Cancelar</string>
    <string name="agre">Aceptar</string>
    <string name="bar_code">Codigo de barras</string>
    <string name="d_title">Nuevo producto</string>
    <string name="new_cat_name">Nombre de la nueva categoria</string>
    <string name="new_cat_title">Nueva categoria</string>

</resources>
