<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_sales">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.amuyu.melitos.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.amuyu.melitos.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.amuyu.melitos.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_sales"
        android:name="com.amuyu.melitos.ui.vender.ventas"
        android:label="ventas_fragment"
        tools:layout="@layout/ventas_fragment" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.amuyu.melitos.ui.Settings.Settings"
        android:label="settings_fragment"
        tools:layout="@layout/settings_fragment" />
</navigation>